# My_Study

./: Boosting Algorithms as Gradient Descent.md  Gradient_Boosting.md  LightGBM.md  Time_Series.md  data-bulit-tool.md  regular-expression.md
conference/: aws-summit-seoul-2025.md
data-tools/: data-bulid-tool.md
java/: 01-jdk_jre_jvm.md
langchain/: 00-concept.md  01-Setup.md  02-function.md  04-fewshot  04-fewshot.md  99-chromadb.md
lightgbm/: Boosting Algorithms as Gradient Descent.md
llm/facebook/: bart-large-mnli.md
llm/papers/: BART.md
nlp/: 01-tokenization  01-tokenization.md  02-text_preprocessing.md  03-language_model.md  04-evaluation_metric.md  05-word_representation.md  06-vector_similarity.md  99-korean
python-framework/: llmops-tools.md  unstructured.md  web-interface.md
python-framework/langchain/: 00-concept.md  01-Setup.md  02-basic.md  03-runnable.md  04-rag.md  05-embedding.md  06-vectorstore.md  08-fewshot.md  10-llm-overview.md  11-openai.md  99-reference.md  Task01.ipynb  Task02.ipynb  pyproject.toml
python-tools/: crawl4ai.md  pydantic.md  uv.md
rag/: 00-concent.md
statistics/: Time_Series.md  correlation.md
